--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ psycopg2-binary==2.9.9
 
 # Authentication
 authlib==1.2.1
-python-jose[cryptography]==3.3.0
+PyJWT==2.8.0
 passlib[bcrypt]==1.7.4
 python-multipart==0.0.6
 
