--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,7 +28,7 @@ services:
       DATABASE_URL: postgresql://user:password@postgres:5432/spytube_backend
       REDIS_URL: redis://redis:6379
     volumes:
-      - ./app:/app
+      - .:/app # mount entire project (so app/ is inside /app/app/)
     command: uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
 
 volumes:
