--- a/requirements.txt
+++ b/requirements.txt
@@ -20,12 +20,11 @@ httpx==0.25.2
 redis==5.0.1
 hiredis==2.2.3
 
-# Environment
-python-dotenv==1.0.0
-
 # Validation
 pydantic==2.5.0
 pydantic-settings==2.1.0
+email-validator==2.1.1
+
 
 # Testing
 pytest==7.4.3
