--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,8 +28,14 @@ services:
       DATABASE_URL: postgresql://user:password@postgres:5432/spytube_backend
       REDIS_URL: redis://redis:6379
     volumes:
-      - .:/app # mount entire project (so app/ is inside /app/app/)
+      - .:/app
     command: uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
+
+  adminer:
+    image: adminer
+    restart: always
+    ports:
+      - "8080:8080" # Visit http://localhost:8080 in your browser
 
 volumes:
   postgres_data:
